@@ -128,3 +128,4 @@
 - Added support for assign menu map and layout in CEFOverlay.
 - Added support for north pointer control.
 - Added support for complete CEFOverlay loading.
+- Added support for mx command pack usage.
